Fix: header overlap search result modal

--- a/Keycapsss/frontend/_public/src/css/style.css
+++ b/Keycapsss/frontend/_public/src/css/style.css
@@ -46,12 +46,12 @@ table a {
   .header-main{
     position: sticky;
     top: -45px;
-    z-index: 100000;
+    z-index: 3400;
   }
 
   .navigation-main{
     position: sticky;
     top: 75px;
-    z-index: 100000;
+    z-index: 3400;
   }
 }
